base/workshop/deploy.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  labels:
    app: session
  name: session
spec:
  replicas: 1
  selector:
    matchLabels:
      app: session
  template:
    metadata:
      labels:
        app: session
    spec:
      serviceAccountName: sa
      containers:
      - args:
        - gotty
        - "-w"
        - "--credential=user:$(SECRET)"
        - "--title-format=$(SESSION)"
        #- tmux
        - bash
        image: lalyos/k8s-workshop
        name: dev
        resources: {}
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: session
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.org/websocket-services: frontend-$(SESSION)
  name: ing
spec:
  rules:
  - host: $(SESSION).$(DOMAIN)
    http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 8080
